<resources>
    <string name="app_name">GitExample</string>
    <string name="scanListTitle">裝置清單</string>
    <string name="scanBtn">開始掃描</string>
    <string name="homeImageDescription">圖片</string>
    <string name="forward">前</string>
    <string name="back">後</string>
    <string name="left">左</string>
    <string name="right">右</string>
    <string name="lastPage">返回</string>
    <string name="nowState">當前連線狀態</string>
    <string name="cancel">取消</string>
    <string name="loadingText">加載中…</string>
    <string name="ipEditTextHintText">IP位置</string>
    <string name="okText">OK</string>
    <string name="wifiHintText">或者使用WiFi</string>
    <string name="streamVideo">StreamVideo</string>
</resources>