<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg">

    <TextView
        android:id="@+id/wifiHintText"
        android:layout_width="104dp"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="12dp"
        android:text="@string/wifiHintText"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/ipAddrEditText"
        app:layout_constraintTop_toBottomOf="@+id/scanBtn" />

    <Button
        android:id="@+id/wifiConnectBtn"
        android:layout_width="66dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:text="@string/okText"
        app:layout_constraintStart_toEndOf="@+id/ipAddrEditText"
        app:layout_constraintTop_toTopOf="@+id/ipAddrEditText" />

    <EditText
        android:id="@+id/ipAddrEditText"
        android:layout_width="191dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/ipEditTextHintText"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.604"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scanBtn" />

    <TextView
        android:id="@+id/deviceListText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/scanListTitle"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/scanBtn"
        android:layout_width="97dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/scanBtn"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mRecyView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mRecyView"
        android:layout_width="325dp"
        android:layout_height="194dp"

        android:layout_marginTop="4dp"
        android:background="@color/white40"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deviceListText" />
</androidx.constraintlayout.widget.ConstraintLayout>